cabal-version: 2.2

author: Michael Snoyman, Kazu Yamamoto, Matt Brown, Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/warpless/issues
category: Web
copyright: Copyright (C) 2012-2017 Michael Snoyman, 2023 Mitchell Rosen
homepage: https://github.com/mitchellwrosen/warpless
license-file: LICENSE
license: MIT
maintainer: mitchellwrosen@gmail.com
name: warpless
stability: experimental
synopsis: A slim warp fork
tested-with: GHC == 9.2.5, GHC == 9.4.4
version: 0.1.0

description: A slim warp fork.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/warpless.git

Flag allow-sendfilefd
    Description: Allow use of sendfileFd (not available on GNU/kFreeBSD)
    Default:     True

Library
  Build-Depends:     base ^>= 4.16 || ^>= 4.17
                   , array
                   , auto-update               >= 0.1.3    && < 0.2
                   , bsb-http-chunked                         < 0.1
                   , bytestring                >= 0.9.1.4
                   , case-insensitive          >= 0.2
                   , containers
                   , ghc-prim
                   , hashable
                   , http-date
                   , http-types                >= 0.12
                   , http2                     >= 3.0      && < 5
                   , iproute                   >= 1.3.1
                   , network ^>= 3.1.2
                   , recv
                   , simple-sendfile           >= 0.2.7    && < 0.3
                   , stm                       >= 2.3
                   , streaming-commons         >= 0.1.10
                   , text
                   , time-manager
                   , unix
                   , vault                     >= 0.3
                   , wai                       >= 3.2      && < 3.3
                   , word8
                   , unliftio
  if impl(ghc < 8)
      Build-Depends: semigroups
  default-extensions:
    BangPatterns
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    ViewPatterns
  default-language: GHC2021
  exposed-modules:
    Warpless
  other-modules:
    Paths_warpless
    Warpless.Buffer
    Warpless.Conduit
    Warpless.Counter
    Warpless.Date
    Warpless.FdCache
    Warpless.File
    Warpless.FileInfoCache
    Warpless.HashMap
    Warpless.Internal
    Warpless.HTTP1
    Warpless.HTTP2
    Warpless.HTTP2.File
    Warpless.HTTP2.PushPromise
    Warpless.HTTP2.Request
    Warpless.HTTP2.Response
    Warpless.HTTP2.Types
    Warpless.Header
    Warpless.IO
    Warpless.Imports
    Warpless.MultiMap
    Warpless.PackInt
    Warpless.ReadInt
    Warpless.Request
    Warpless.RequestHeader
    Warpless.Response
    Warpless.ResponseHeader
    Warpless.Run
    Warpless.SendFile
    Warpless.Settings
    Warpless.Types
    Warpless.WithApplication
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if (os(linux) || os(freebsd) || os(darwin)) && flag(allow-sendfilefd)
      Cpp-Options:   -DSENDFILEFD
  HS-Source-Dirs:       src
