cabal-version: 2.2

author: Michael Snoyman, Kazu Yamamoto, Matt Brown, Mitchell Dalvi Rosen
bug-reports: https://github.com/mitchellwrosen/warpless/issues
category: Web
copyright: Copyright (C) 2012-2017 Michael Snoyman, 2023-2024 Mitchell Dalvi Rosen
homepage: https://github.com/mitchellwrosen/warpless
license-file: LICENSE
license: MIT
maintainer: mitchellwrosen@gmail.com
name: warpless
stability: experimental
synopsis: A slim warp fork
tested-with: GHC == 9.2.5, GHC == 9.4.4
version: 0.1.0

description: A slim warp fork.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/warpless.git

Library
  Build-Depends:
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19,
    array,
    bsb-http-chunked ^>= 0.0,
    bytestring ^>= 0.10 || ^>= 0.11,
    case-insensitive ^>= 1.2,
    http-date,
    http-types >= 0.12,
    ki ^>= 1.0.0.2,
    network ^>= 3.1.2,
    recv ^>= 0.1.0,
    simple-sendfile >= 0.2.7 && < 0.3,
    streaming-commons >= 0.1.10,
    unix ^>= 2.8.0,
    vault >= 0.3,
    wai ^>= 3.2.2,
    witch ^>= 1.2.0,
    unliftio,
  default-extensions:
    BangPatterns
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  default-language: GHC2021
  exposed-modules:
    Warpless
  other-modules:
    Paths_warpless
    Warpless.Byte
    Warpless.ByteString
    Warpless.Cached
    Warpless.ChunkedSource
    Warpless.CommonRequestHeaders
    Warpless.CommonResponseHeaders
    Warpless.Connection
    Warpless.Date
    Warpless.Exception
    Warpless.File
    Warpless.FileInfo
    Warpless.Prelude
    Warpless.Request
    Warpless.RequestHeader
    Warpless.Response
    Warpless.ResponseHeader
    Warpless.Run
    Warpless.Settings
    Warpless.Source
    Warpless.SourceN
    Warpless.Types
    Warpless.WriteBuffer
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
  HS-Source-Dirs:       src
